--- a/deploy.conf
+++ b/deploy.conf
@@ -1,7 +1,7 @@
 # https://github.com/fl3a/jekyll_deployment
 
 # Branch that should be build, e.g. 'master'
-build_branch='master'
+build_branch='main'
 
 # Subdomain, e.g. 'sub.' Optional, mind the trailing '.' !
 # subdomain='sub.'
