--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
-theme: jekyll-theme-minimal
-title: 💻✒️📄🌟
-description: Carolyn Stransky's CV
+theme: jekyll-theme-primer
+title: Florian Latzel
+description: Curriculum Vitae
+
+url: "https://florian.latzel.io" # the base hostname & protocol for your site, e.g. http://example.com
+
+# jekyll-seo-tag
+lang: "de"
+social:
+  name: Florian Latzel
+
+git_repo: "https://github.com/fl3a/cv/"
