--- a/deploy.conf
+++ b/deploy.conf
@@ -19,5 +19,4 @@ www="/var/www/virtual/${USER}/${domain}/cv"
 env="production"
 
 # Build prefix, e.g. '--incremental' added as prefix `bundle excec jekyll build`
-build_prefix="--incremental"
-
+build_prefix="--incremental
