--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-primer
 title: Florian Latzel
 description: Curriculum Vitae
 
-url: "https://florian.latzel.io" # the base hostname & protocol for your site, e.g. http://example.com
+# url: "https://florian.latzel.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # jekyll-seo-tag
 lang: "de"
@@ -10,3 +10,4 @@ social:
   name: Florian Latzel
 
 git_repo: "https://github.com/fl3a/cv/"
+repository: "fl3a/cv"
