--- a/deploy.conf
+++ b/deploy.conf
@@ -10,7 +10,7 @@ build_branch='main'
 domain='florian.latzel.io'
 
 # Path to your Jekyll Git-Repository 
-git_repo="${HOME}/repos/cv
+git_repo="${HOME}/repos/cv"
 
 # Path to document root, destination for the generated html
 www="/var/www/virtual/${USER}/${domain}/cv"
