--- a/deploy.conf
+++ b/deploy.conf
@@ -16,7 +16,7 @@ git_repo="${HOME}/repos/cv"
 www="/var/www/virtual/${USER}/${domain}/cv"
 
 # Value for `JEKYLL_ENV`, default 'production'
-env=" "
+env="local"
 
 # Build prefix, e.g. '--incremental' added as prefix `bundle excec jekyll build`
 build_prefix="--incremental"
