--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,6 @@ exclude:
   - Gemfile.lock  
   - deploy.conf
 
-git_repo: "https://github.com/fl3a/cv/"
+git_repo: "https://github.com/fl3a/cv"
 repository: "fl3a/cv"
 
