Build settings from florian.latzel.io.

--- a/deploy.conf
+++ b/deploy.conf
@@ -3,9 +3,6 @@
 # Branch that should be build, e.g. 'master'
 build_branch='main'
 
-# Subdomain, e.g. 'sub.' Optional, mind the trailing '.' !
-# subdomain='sub.'
-
 # Domain, e.g. 'example.com'.
 domain='florian.latzel.io'
 
@@ -16,7 +13,10 @@ git_repo="${HOME}/repos/cv"
 www="/var/www/virtual/${USER}/${domain}/cv"
 
 # Value for `JEKYLL_ENV`, default 'production'
-env="local"
+#env="local"
 
-# Build prefix, e.g. '--incremental' added as prefix `bundle excec jekyll build`
-build_prefix="--incremental"
+# PATH, e.g. to include a newer version of gcc which is needed for compiling gems.
+PATH="/opt/rh/devtoolset-9/root/usr/bin/:${PATH}"
+
+# pkg-config search path that contains **MagickCore.pc** 
+export PKG_CONFIG_PATH="/usr/lib/pkgconfig/"
