diesmal ohne Klammern

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ social:
   name: Florian Latzel
 
 exclude:
-  - [vendor]      
+  - vendor      
   - Gemfile
   - Gemfile.lock  
   - deploy.conf
