--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ title: Florian Latzel
 description: Curriculum Vitae
 
 theme: jekyll-theme-primer
-plugins:
-- jekyll-remote-theme 
+baseurl: /cv
 
 # url: "https://florian.latzel.io" 
 
