+extra_vars mit GitHub API authentication.

--- a/deploy.conf
+++ b/deploy.conf
@@ -15,6 +15,9 @@ www="/var/www/virtual/${USER}/${domain}/cv"
 # Value for `JEKYLL_ENV`, default 'production'
 #env="local"
 
+# File with extra variables like JEKYLL_GITHUB_TOKEN to source
+extra_vars="${HOME}/.zshrc"
+
 # PATH, e.g. to include a newer version of gcc which is needed for compiling gems.
 PATH="/opt/rh/devtoolset-9/root/usr/bin/:${PATH}"
 
