--- a/deploy.conf
+++ b/deploy.conf
@@ -23,3 +23,5 @@ PATH="/opt/rh/devtoolset-9/root/usr/bin/:${PATH}"
 
 # pkg-config search path that contains **MagickCore.pc** 
 export PKG_CONFIG_PATH="/usr/lib/pkgconfig/"
+
+build_prefix='--trace'
