--- a/deploy.conf
+++ b/deploy.conf
@@ -13,7 +13,7 @@ git_repo="${HOME}/repos/cv"
 www="/var/www/virtual/${USER}/${domain}/cv"
 
 # Value for `JEKYLL_ENV`, default 'production'
-#env="local"
+env="production"
 
 # File with extra variables like JEKYLL_GITHUB_TOKEN to source
 extra_vars="${HOME}/.zshrc"
