--- a/deploy.conf
+++ b/deploy.conf
@@ -24,4 +24,6 @@ PATH="/opt/rh/devtoolset-9/root/usr/bin/:${PATH}"
 # pkg-config search path that contains **MagickCore.pc** 
 export PKG_CONFIG_PATH="/usr/lib/pkgconfig/"
 
-build_prefix='--trace'
+build_prefix="JEKYLL_BUILD_REVISION=$(git rev-parse HEAD)"
+
+build_postfix='--trace'
