--- a/deploy.conf
+++ b/deploy.conf
@@ -15,15 +15,17 @@ www="/var/www/virtual/${USER}/${domain}/cv"
 # Value for `JEKYLL_ENV`, default 'production'
 env="production"
 
-# File with extra variables like JEKYLL_GITHUB_TOKEN to source
-extra_vars="${HOME}/.zshrc"
-
 # PATH, e.g. to include a newer version of gcc which is needed for compiling gems.
 PATH="/opt/rh/devtoolset-9/root/usr/bin/:${PATH}"
 
 # pkg-config search path that contains **MagickCore.pc** 
 export PKG_CONFIG_PATH="/usr/lib/pkgconfig/"
 
-JEKYLL_BUILD_REVISION=$(git rev-parse HEAD)
+# Get commit SHA id 
+# @see https://github.com/jekyll/github-metadata/blob/master/docs/configuration.md#overrides
+
+# Prepend Var
+rev=$(git rev-parse HEAD)
+build_prefix="JEKYLL_BUILD_REVISION=${rev}"
 
 build_postfix='--trace'
