--- a/deploy.conf
+++ b/deploy.conf
@@ -21,10 +21,9 @@ PATH="/opt/rh/devtoolset-9/root/usr/bin/:${PATH}"
 # pkg-config search path that contains **MagickCore.pc** 
 export PKG_CONFIG_PATH="/usr/lib/pkgconfig/"
 
-# Get commit SHA id 
+# Get commit SHA id and assign to JEKYLL_BUILD_REVISION
 # @see https://github.com/jekyll/github-metadata/blob/master/docs/configuration.md#overrides
-
-# Prepend Var
 rev=$(git rev-parse HEAD)
 
-build_postfix='--trace'
+# Add suffix to `bundle exec jekyll build`, e.g. '--trace'
+build_suffix='--trace'
