--- a/deploy.conf
+++ b/deploy.conf
@@ -1,4 +1,9 @@
-# https://github.com/fl3a/jekyll_deployment
+#############################################
+# https://github.com/fl3a/jekyll_deployment #
+#############################################
+
+# Debug, be more verbose [true false]
+debug=true
 
 # Branch that should be build, e.g. 'master'
 build_branch='main'
@@ -15,15 +20,25 @@ www="/var/www/virtual/${USER}/${domain}/cv"
 # Value for `JEKYLL_ENV`, default 'production'
 env="production"
 
-# PATH, e.g. to include a newer version of gcc which is needed for compiling gems.
+# PATH, e.g. to include a newer version of gcc 
+# which is needed for compiling gems.
 PATH="/opt/rh/devtoolset-9/root/usr/bin/:${PATH}"
 
-# pkg-config search path that contains **MagickCore.pc** 
+# Search path for pkg-config that contains **MagickCore.pc** 
 export PKG_CONFIG_PATH="/usr/lib/pkgconfig/"
 
-# Get commit SHA id and assign to JEKYLL_BUILD_REVISION
-# @see https://github.com/jekyll/github-metadata/blob/master/docs/configuration.md#overrides
-rev=$(git rev-parse HEAD)
+# File which contains jekyll specific variables
+# like e.g. JEKYLL_GITHUB_TOKEN that will bes sourced
+# extra_vars="${HOME}/.jekyll_vars"
 
 # Add suffix to `bundle exec jekyll build`, e.g. '--trace'
-build_suffix='--trace'
+#build_suffix='--trace'
+
+# File which contains jekyll specific variables
+# like e.g. JEKYLL_GITHUB_TOKEN that will be sourced
+#extra_vars="${HOME}/.jekyll_vars"
+
+# Execute the following line after the deployment is finished.
+# E.g. another jekyll lives in a subdirectory of this one,
+# like my cv which lives at florian.latzel.io/cv/ that need to be rebuild too.
+#post_exec="${HOME}/repos/jekyll_deployment/post-receive ${HOME}/repos/cv"
