--- a/deploy.conf
+++ b/deploy.conf
@@ -21,7 +21,7 @@ www="/var/www/virtual/${USER}/${domain}/cv"
 env="production"
 
 # PATH, e.g. to include a newer version of gcc 
-# which is needed for compiling gems.
+# which is needed for compiling gems via `bundle install`.
 PATH="/opt/rh/devtoolset-9/root/usr/bin/:${PATH}"
 
 # Search path for pkg-config that contains **MagickCore.pc** 
@@ -36,7 +36,7 @@ export PKG_CONFIG_PATH="/usr/lib/pkgconfig/"
 
 # File which contains jekyll specific variables
 # like e.g. JEKYLL_GITHUB_TOKEN that will be sourced
-#extra_vars="${HOME}/.jekyll_vars"
+extra_vars="${HOME}/.jekyll_github_token"
 
 # Execute the following line after the deployment is finished.
 # E.g. another jekyll lives in a subdirectory of this one,
