Variable ref hinzugefügt.

--- a/deploy.conf
+++ b/deploy.conf
@@ -20,6 +20,10 @@ www="/var/www/virtual/${USER}/${domain}/cv"
 # Value for `JEKYLL_ENV`, default 'production'
 env="production"
 
+# Get git SHA, assign it to `JEKYLL_BUILD_REVISION` 
+# for overriding `site.github.build_revision` variable.
+rev=$(git rev-parse HEAD)
+
 # PATH, e.g. to include a newer version of gcc 
 # which is needed for compiling gems via `bundle install`.
 PATH="/opt/rh/devtoolset-9/root/usr/bin/:${PATH}"
@@ -27,12 +31,8 @@ PATH="/opt/rh/devtoolset-9/root/usr/bin/:${PATH}"
 # Search path for pkg-config that contains **MagickCore.pc** 
 export PKG_CONFIG_PATH="/usr/lib/pkgconfig/"
 
-# File which contains jekyll specific variables
-# like e.g. JEKYLL_GITHUB_TOKEN that will bes sourced
-# extra_vars="${HOME}/.jekyll_vars"
-
 # Add suffix to `bundle exec jekyll build`, e.g. '--trace'
-#build_suffix='--trace'
+build_suffix='--trace'
 
 # File which contains jekyll specific variables
 # like e.g. JEKYLL_GITHUB_TOKEN that will be sourced
