Sourcing von Github Token wieder reinwq

--- a/deploy.conf
+++ b/deploy.conf
@@ -36,7 +36,7 @@ build_suffix='--trace'
 
 # File which contains jekyll specific variables
 # like e.g. JEKYLL_GITHUB_TOKEN that will be sourced
-# extra_vars="${HOME}/.jekyll_github_token"
+extra_vars="${HOME}/.jekyll_github_token"
 
 # Execute the following line after the deployment is finished.
 # E.g. another jekyll lives in a subdirectory of this one,
